(library
 (name oS)
 (public_name mirage-xen)
 (libraries is_freestanding lwt cstruct xenstore.client
   shared-memory-ring-lwt lwt-dllist mirage-profile logs io-page fmt
   mirage-runtime bheap duration)
 (foreign_stubs
  (language c)
  (flags :standard -O2 -std=c99 -Wall -Werror -Iinclude
    -D__XEN_INTERFACE_VERSION__=__XEN_LATEST_INTERFACE_VERSION__)
  (names alloc_pages_stubs atomic_stubs barrier_stubs bmap checksum_stubs
    clock_stubs cstruct_stubs evtchn gnttab main)
))

(include_subdirs unqualified)
