(library
 (name oS)
 (public_name mirage-xen)
 (libraries lwt cstruct xenstore.client shared-memory-ring-lwt lwt-dllist
   mirage-profile logs io-page fmt mirage-runtime bheap duration)
 (no_dynlink)
 (foreign_archives mirage-xen_bindings)
)

(rule
 (deps
  (source_tree bindings))
 (targets libmirage-xen_bindings.a)
 (action
  (no-infer
   (progn
    (chdir
     bindings
     (run %{make}))
    (copy bindings/libmirage-xen_bindings.a libmirage-xen_bindings.a)))))

(install
 (section lib)
 (files
  (bindings/mirage-xen.pc as ../pkgconfig/mirage-xen.pc)
))
